@@ -32,9 +32,9 @@ Build-Depends: debhelper (>= 8),
                x11proto-xext-dev,
                libcups2-dev (>= 1.2),
                gobject-introspection (>= 0.10.1),
-               libgirepository1.0-dev (>= 0.10.1),
-               gtk-doc-tools (>= 1.8),
-Build-Depends-Indep: docbook-xml,
+               libgirepository1.0-dev (>= 0.10.1)
+Build-Depends-Indep: gtk-doc-tools (>= 1.8),
+                     docbook-xml,
                      docbook-utils,
                      libglib2.0-doc,
                      libatk1.0-doc,
