@@ -1,5 +1,4 @@
-# from the shared flavor
-debian/install/shared/usr/share/gtk-doc/html/gtk* usr/share/doc/@DOC_PKG@
-debian/install/shared/usr/share/gtk-doc/html/gdk* usr/share/doc/@DOC_PKG@
-# from the source
 docs/*.txt usr/share/doc/@DOC_PKG@
+docs/reference/gtk/html/* usr/share/doc/libgtk-3-doc/gtk3
+docs/reference/gdk/html/* usr/share/doc/libgtk-3-doc/gdk3
+
