@@ -63,7 +63,6 @@ DEB_CONFIGURE_EXTRA_FLAGS = \
 
 DEB_CONFIGURE_FLAGS_shared = \
 			--enable-shared \
-			--enable-gtk-doc \
 			--enable-introspection=yes \
 			--disable-static
 
